# ARGinator

./: .data.dvc  .gcloudignore  .gitignore  .models.dvc  .pre-commit-config.yaml  README.md  dev-requirements.txt  env.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: cml_data.yaml  linting.yaml  locust.yaml  pre-commit-update.yaml  pre_commit.yaml  stage_model.yaml  tests.yaml
configs/: config.yaml  sweep.yaml  train_config.yaml  vertex_config.yaml
configs/experiment/: default.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/paths/: default.yaml
configs/processing/: default.yaml
configs/task/: binary.yaml  multiclass.yaml
dockerfiles/: api.dockerfile  cloudbuild.yaml  cloudbuild_api.yaml  cloudbuild_artifacts.yaml  cloudbuild_frontend.yaml  cloudbuild_train.yaml  frontend.dockerfile  inference.dockerfile  train.dockerfile  train_gcp.dockerfile
docs/: mkdocs.yaml
docs/source/: TESTS.md  checklist.md  index.md
models/: model.pth
notebooks/: data_check.ipynb
reports/: checklist.md
src/arginator_protein_classifier/: api.py  backend.py  convertfa.py  data.py  data_drift.py  data_validation.py  evaluate.py  frontend.py  inference.py  link_model.py  model.py  train.py  umap_plot.py
tests/: TESTS.md  test_api.py  test_data.py  test_evaluate.py  test_model.py  test_train.py
tests/integrationtests/: test_api.py
tests/performancetests/: locustfile.py  test_model.py
