[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "arginator_protein_classifier"
version = "0.0.1"
description = "Protein Language Model for classification"
authors = [
  { name = "Elena, Max, Toms and Claudio", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "dotenv>=0.9.9",
    "fastapi==0.115.6",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.2.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select =["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
# usage: uv run train
train = "arginator_protein_classifier.train:train"

# usage: uv run evaluate
evaluate = "arginator_protein_classifier.evaluate:evaluate"

# usage: uv run data
data = "arginator_protein_classifier.data:main"
